--- a/C++/GameOfLife/src/CMakeLists.txt
+++ b/C++/GameOfLife/src/CMakeLists.txt
@@ -19,6 +19,8 @@ set(LIBRARY_HEADERS
 
 add_library(${LIB_NAME} STATIC ${LIBRARY_HEADERS} ${LIBRARY_SOURCES})
 
+include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+
 target_include_directories(
     ${LIB_NAME} PUBLIC 
     ${LIBRARY_INCLUDES}
