--- a/C++/GameOfLife/app/CMakeLists.txt
+++ b/C++/GameOfLife/app/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(${EXECUTABLE_NAME} main.cpp)
 
 target_include_directories(${EXECUTABLE_NAME} PRIVATE ${LIBRARY_INCLUDES})
-target_link_libraries(${EXECUTABLE_NAME} PRIVATE ${LIB_NAME} OpenMP::OpenMP_CXX)
+target_link_libraries(${EXECUTABLE_NAME} PRIVATE ${LIB_NAME} OpenMP::OpenMP_CXX ${CONAN_LIBS})
