[2.1] Fixed conan and cmake automated build process and started progress in the rendering, cell and loop classes

--- a/C++/GameOfLife/src/CMakeLists.txt
+++ b/C++/GameOfLife/src/CMakeLists.txt
@@ -19,7 +19,7 @@ set(LIBRARY_HEADERS
 
 add_library(${LIB_NAME} STATIC ${LIBRARY_HEADERS} ${LIBRARY_SOURCES})
 
-include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+include(${CMAKE_SOURCE_DIR}/ext/conan_toolchain.cmake)
 
 target_include_directories(
     ${LIB_NAME} PUBLIC 
